@@ -1586,7 +1586,9 @@
                       {
                         "name": "Torch Puzzle",
                         "access_rules": [
-                          "@Spirit Temple/Lower Child,@logic/explosives,sticks"
+                          "@Spirit Temple/Lower Child,@logic/explosives,sticks",
+                          "@Spirit Temple/Lower Child,@logic/explosives,@logic/has fire",
+                          "@Spirit Temple/Mirror Room,@logic/has fire"
                         ],
                         "item_count": 1
                       },
@@ -1625,8 +1627,10 @@
                       {
                         "name": "Map Chest",
                         "access_rules": [
+                          "@Spirit Temple/Mirror Room,@logic/has fire",
                           "@Spirit Temple/Mirror Room,bow",
-                          "@Spirit Temple/Lower Child,@logic/explosives,sticks"
+                          "@Spirit Temple/Lower Child,@logic/explosives,sticks",
+                          "@Spirit Temple/Lower Child,@logic/explosives,@logic/has fire"
                         ],
                         "item_count": 1
                       },
