@@ -6,6 +6,7 @@
   -added adult trade sequence
   -changed goron tunic as sequence breakable for fire trial
   -changed shops with tunics only show on adult map
+  -fixed Spirit Temple map chest and torch puzzle can be opened with fire (duh)
 1.0.0.6:
   -fixed Shadow Temple having 1 free item too much
   -changed free item counters to go upwards so the dungeon gets cleared if you have them all
